--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -11,5 +11,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - name: Install Composer Dependencies
+        working-directory: ./app
+        run: "npm i"
       - name: ha-ha
         uses: ./.github/actions/joke-action
