--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Install Composer Dependencies
-        working-directory: ./app
+        working-directory: ./.github/actions/joke-action
         run: "npm i"
       - name: ha-ha
         uses: ./.github/actions/joke-action
